--- a/Automated Email Alerts.ipynb
+++ b/Automated Email Alerts.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Objective of this exercise is to create automatic email alerts to provide key insights from data in a SQL database (Microsoft SQL Server).  By creating this script, we can set criteria to look for red flags, positive insights, and more, reducing overhead and creating set standards for KPIs.  We will look at the following variables: A,B,C.  Lastly, we'll provide next steps to take this analysis further."
+    "Abstract: The Objective of this exercise is to create automatic email alerts to provide key insights from data in a SQL database (Microsoft SQL Server). By creating this script, we can set criteria to look for red flags, positive insights, and more, reducing overhead and creating set standards for KPIs."
    ]
   },
   {
